[gd_scene load_steps=7 format=2]

[ext_resource path="res://escenas/enemigos/E1.tscn" type="PackedScene" id=1]
[ext_resource path="res://escenas/enemigos/E2.tscn" type="PackedScene" id=2]
[ext_resource path="res://escenas/enemigos/E3.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenas/enemigos/E4.tscn" type="PackedScene" id=4]
[ext_resource path="res://escenas/enemigos/E5.tscn" type="PackedScene" id=5]
[ext_resource path="res://codigo/ContenedorEnemigos.gd" type="Script" id=6]

[node name="ContenedorEnemigos" type="Node2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="tipo1" type="Node2D" parent="."]
position = Vector2( 0, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="E1" parent="tipo1" instance=ExtResource( 1 )]

[node name="E2" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( 1112, 0 )

[node name="E3" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( -1112, 0 )

[node name="E4" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( -888, 0 )

[node name="E5" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( 888, 0 )

[node name="E6" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( -664, 0 )

[node name="E7" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( -440, 0 )

[node name="E8" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( 664, 0 )

[node name="E9" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( 448, 0 )

[node name="E10" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( -224, 0 )

[node name="E11" parent="tipo1" instance=ExtResource( 1 )]
position = Vector2( 224, 0 )

[node name="tipo2" type="Node2D" parent="."]
position = Vector2( 0, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="E2" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( -1112, 0 )

[node name="E3" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( 1120, 0 )

[node name="E4" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( 888, 0 )

[node name="E5" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( 664, 0 )

[node name="E6" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( 448, 0 )

[node name="E7" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( 224, 0 )

[node name="E8" parent="tipo2" instance=ExtResource( 2 )]

[node name="E9" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( -224, 0 )

[node name="E10" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( -440, 0 )

[node name="E11" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( -664, 0 )

[node name="E12" parent="tipo2" instance=ExtResource( 2 )]
position = Vector2( -888, 0 )

[node name="tipo3" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="E3" parent="tipo3" instance=ExtResource( 3 )]

[node name="E4" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( 1120, 0 )

[node name="E5" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( 888, 0 )

[node name="E6" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( 664, 0 )

[node name="E7" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( 448, 0 )

[node name="E8" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( 224, 0 )

[node name="E9" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( -224, 0 )

[node name="E10" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( -440, 0 )

[node name="E11" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( -664, 0 )

[node name="E12" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( -888, 0 )

[node name="E13" parent="tipo3" instance=ExtResource( 3 )]
position = Vector2( -1112, 0 )

[node name="tipo4" type="Node2D" parent="."]
position = Vector2( 0, -160 )
__meta__ = {
"_edit_group_": true
}

[node name="E4" parent="tipo4" instance=ExtResource( 4 )]

[node name="E5" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( 1120, 0 )

[node name="E6" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( 888, 0 )

[node name="E7" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( 664, 0 )

[node name="E8" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( 448, 0 )

[node name="E9" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( 224, 0 )

[node name="E10" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( -224, 0 )

[node name="E11" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( -440, 0 )

[node name="E12" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( -664, 0 )

[node name="E13" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( -888, 0 )

[node name="E14" parent="tipo4" instance=ExtResource( 4 )]
position = Vector2( -1112, 0 )

[node name="tipo5" type="Node2D" parent="."]
position = Vector2( 0, -320 )
__meta__ = {
"_edit_group_": true
}

[node name="E5" parent="tipo5" instance=ExtResource( 5 )]

[node name="E6" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( 1120, 0 )

[node name="E7" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( 888, 0 )

[node name="E8" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( 664, 0 )

[node name="E9" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( 448, 0 )

[node name="E10" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( 224, 0 )

[node name="E11" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( -224, 0 )

[node name="E12" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( -440, 0 )

[node name="E13" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( -664, 0 )

[node name="E14" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( -888, 0 )

[node name="E15" parent="tipo5" instance=ExtResource( 5 )]
position = Vector2( -1112, 0 )
